--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,16 +6,15 @@
   --second-gray: rgb(80, 80, 80);
   --third-gray: rgb(149, 150, 151);
   --fourth-gray: rgb(250, 250, 250);
+  --borders: 5px;
 }
 
 body {
   margin: 0;
   font-family: Lato, sans-serif;
   background-color: rgb(247, 249, 249);
-  height: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: Lato, sans-serif;
 }
