--- a/src/styles/cardsBox.module.css
+++ b/src/styles/cardsBox.module.css
@@ -15,6 +15,16 @@
   justify-content: space-around;
   border-radius: var(--borders);
 }
+.cardSelected {
+  background-color: var(--button-color);
+  height: 100%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: var(--borders);
+}
 .cardFace {
   height: 100px;
   width: 80%;
