--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,11 +8,13 @@
   --fourth-gray: rgb(250, 250, 250);
   --borders: 5px;
 }
-
+html,
 body {
   margin: 0;
   font-family: Lato, sans-serif;
+  font-weight: 700;
   background-color: rgb(247, 249, 249);
+  height: 100vh;
 }
 
 code {
